last modifications for christmas conference

--- a/TeX/presentations/soc_ext_presentation.tex
+++ b/TeX/presentations/soc_ext_presentation.tex
@@ -59,11 +59,11 @@
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 
-\title[Soccer and Crime]{  \textbf{Crime Externalities from Soccer Games in Germany }\newline Work in progress}
+\title[Soccer and Crime]{  \textbf{Crime Externalities from Mass Gatherings in Germany }\newline Work in progress}
 \author[Marc Fabel]{Marc Fabel \newline University of Munich \& ifo Institute}
 %\institute[VfS Meeting 2017]{}
 \vspace{-2 em}
-\date{ifo Christmas conference, Munich\\December 11, 2019}
+\date{ifo Christmas Conference, Munich\\December 11, 2019}
 
 \titlegraphic{\vspace{3em}
 
@@ -92,9 +92,7 @@
 %  }
 % COMMAND UM ÜBERALL DIE ÜBERSICHT ZU HABEN
 
-% To Do:
-% overview slide?
-% Channels, maternal employment (gibt zwei richtungen, siehe Natalia Email)
+
 
 
 
@@ -115,7 +113,7 @@
 		High popularity of soccer (2017/18):
 		\begin{itemize}
 			\item Bundesliga highest average attendance per match: 42,700, first three leagues: 21.5 Mio. annually
-			\item Bundesliga: 3.17 billion (373 Mio) Euros in revenues (profits)
+			\item Bundesliga: 3.17 billion Euros in revenues
 			\item External effects in many dimensions
 			\begin{itemize}
 				\item Police operations, health outcomes, road safety, penal system, ...
@@ -124,7 +122,7 @@
 
 
 		\begin{block}{Research question}
-			\textbf{$\Rightarrow$ What are the causal effects of soccer matches on violent behavior (assault rates)?}
+			\textbf{$\Rightarrow$ What are the effects of soccer matches on violent behavior (assault rates)?}
 		\end{block}
 	\end{frame}
 %--------------------------------------------------------------------
@@ -191,7 +189,7 @@
 		\begin{block}{Soccer Data}
 			\begin{itemize}
 				\item Obtained via webscraping from kicker.de and transfermarkt.de
-				\item All matches within context of German Football League System (first three leagues) \hyperlink{link_soccer_matches}{\beamerbutton{Soccer matches}}
+				\item All matches of the first three leagues within context of German Football League System \hyperlink{link_soccer_matches}{\beamerbutton{Soccer matches}}
 				\item Detailed match and table standing parameters
 				\begin{itemize}
 				{\scriptsize
@@ -254,9 +252,9 @@
 	
 		\begin{itemize}
 			\item Assaults$_{rdmy}$: number of assaults per 100,000 individuals, scaled to reflect yearly crime rates
+			\item Interactions of region and time FE: $\text{date}_{dmy}\times\vartheta_r$
 			\item $ X_{rdmy}$: school and public holidays FE and local weather controls
 			\item Using population weights
-			\item Interactions of region and time FE: $\text{date}_{dmy}\times\vartheta_r$
 			\item Standard errors: twoway cluster (i) district-year and (ii) year-month
 		\end{itemize}
 	\end{frame}
@@ -324,7 +322,7 @@
 %--------------------------------------------------------------------
 \begin{frame}
 	\begin{center}
-		Thank you very much for your attention!
+		Thank you very much for your attention \newline and Merry Christmas!
 	\end{center}
 \end{frame}
 
