make TeX file usable in draft mode

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -1,7 +1,7 @@
 %--------------------------------------------------------------------
 %	DOCUMENT CLASS
 %--------------------------------------------------------------------
-\documentclass[11pt, a4paper]{article} % type of document (paper, presentation, book,...); scrartcl class with sans serif titles, European layout 
+\documentclass[11pt, a4paper, draft]{article} % type of document (paper, presentation, book,...); scrartcl class with sans serif titles, European layout 
 \usepackage{fullpage} % leaves less space at margins of page
 \usepackage[onehalfspacing]{setspace} % determine line pitch to 1.5
 
@@ -426,7 +426,7 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 \vspace*{\fill}
 \begin{figure}[H]\centering
 	\caption{The types of criminal offenses}\label{fig_soc_ext:offense_types_distribution_2014}
-	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_offense_key_distribution_2014}
+	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_offense_key_distribution_2014.pdf}
 	\begin{minipage}{0.95\linewidth}
 		\scriptsize{\emph{Notes:} The figure depicts the frequency distribution of the most common criminal offenses in the Federal Republic of Germany in 2014. The most common offense type is intentional simple bodily injury (224000), followed by threats (232300), and two forms of dangerous and serious bodily injury (222110 \& 222010). These four offense types together comprise around 75\% of all criminal offenses. \newline \emph{Source:} Own representation with data from the Federal Criminal Police Office.}
 	\end{minipage}
@@ -439,17 +439,17 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 \begin{figure}[H]\centering
 	\caption{Distribution of assaults across time}\label{fig_soc_ext:assault_time_distribution_2014}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_hour}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_hour.pdf}
 	\end{subfigure}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_dow}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_dow.pdf}
 	\end{subfigure}
 
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_month_2014}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_month_2014.pdf}
 	\end{subfigure}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014_single}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014_single.pdf}
 	\end{subfigure}
 	\begin{minipage}{\linewidth}
 		\scriptsize{\emph{Notes:} The figure shows the distribution of assaults across the course of a day, days of the week, across months (adjusted for the number of days per month), and across the days of the year in the Federal Republic of Germany.\newline \emph{Source:} Own representation with data from the Federal Criminal Police Office.\newline \hspace{1 em} $^1$ The figures in panel C and D are solely based on the year 2014. Please consult the appendix for figures from the other years.}
@@ -479,7 +479,7 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 \vspace*{\fill}
 \begin{figure}[H]\centering
 	\caption{Soccer matches}\label{fig_soc_ext:descriptives_matches_time_attendance}
-	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ect_desc_soccer_macthes_attendance}	
+	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ect_desc_soccer_macthes_attendance.pdf}	
 	\begin{minipage}{\linewidth}
 		\scriptsize{\emph{Notes:} The figures show key aspects of soccer games in the data set. Panel A shows how the number of matches vary over the course of a week, Panel B plots the distribution of matches over the course of a day, and Panel C shows kernel densities for the number of spectators (in thousand) across the three leagues.\newline \emph{Source:} Own representation with data obtained from kicker.de.}
 	\end{minipage}
@@ -510,7 +510,7 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 \vspace*{\fill}
 \begin{figure}[H]\centering
 	\caption{The distance between stadiums and their closest weather monitor}\label{fig_soc_ext:hist_distance_stadium_monitors}
-	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_distance_monitors_stadiums}
+	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_distance_monitors_stadiums.pdf}
 	\begin{minipage}{0.95\linewidth}
 		\scriptsize{\emph{Notes:} The figure shows the distribution of the distance between stadiums and their closest weather monitor. The average distance between the two is 15 km. \newline \emph{Source:} Own representation with data from Germany's National Meterological Service (Deutscher Wetterdienst).}
 	\end{minipage}
@@ -721,18 +721,18 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 \begin{figure}[H]\centering
 	\caption{Distribution of assaults across days of the year, per year}\label{fig_soc_ext:assault_year_distribution}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2011}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2011.pdf}
 	\end{subfigure}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2012}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2012.pdf}
 	\end{subfigure}\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2013}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2013.pdf}
 	\end{subfigure}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014.pdf}
 	\end{subfigure}
 	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2015}
+		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2015.pdf}
 	\end{subfigure}
 	\begin{minipage}{\linewidth}
 		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.\newline \emph{Source:} Own representation with data from the Federal Criminal Police Office}
